@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_logicor.h,v 1.11 2004/10/21 14:20:35 bzfpfend Exp $"
+#pragma ident "@(#) $Id: cons_logicor.h,v 1.12 2004/11/02 11:27:35 bzfpfend Exp $"
 
 /**@file   cons_logicor.h
  * @brief  constraint handler for logicor constraints
@@ -58,6 +58,20 @@ RETCODE SCIPcreateConsLogicor(
 /** gets the dual solution of the logic or constraint in the current LP */
 extern
 Real SCIPgetDualsolLogicor(
+   SCIP*            scip,               /**< SCIP data structure */
+   CONS*            cons                /**< constraint data */
+   );
+
+/** gets array of variables in logic or constraint */
+extern
+VAR** SCIPgetVarsLogicor(
+   SCIP*            scip,               /**< SCIP data structure */
+   CONS*            cons                /**< constraint data */
+   );
+
+/** gets number of variables in logic or constraint */
+extern
+int SCIPgetNVarsLogicor(
    SCIP*            scip,               /**< SCIP data structure */
    CONS*            cons                /**< constraint data */
    );
