@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: sepa_strongcg.c,v 1.1 2004/10/29 12:58:36 bzfwolte Exp $"
+#pragma ident "@(#) $Id: sepa_strongcg.c,v 1.2 2004/11/02 11:27:35 bzfpfend Exp $"
 
 /**@file   sepa_strongcg.c
  * @brief  Strong CG Cuts (Letchford & Lodi)
@@ -31,7 +31,7 @@
 
 
 #define SEPA_NAME              "strongcg"
-#define SEPA_DESC              "Strong CG cuts separator"
+#define SEPA_DESC              "Strong CG cuts separator (Letchford and Lodi)"
 #define SEPA_PRIORITY               -10
 #define SEPA_FREQ                    10
 
